describe config vars